# k8s-validator

./: .gitignore  .gitlab-ci-example.yml  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_configmap_fix.py
.github/workflows/: validate-manifests.yml
k8s_validator/: __init__.py  cli.py
k8s_validator/core/: __init__.py  models.py  validator.py
k8s_validator/crds/: cache.py  detector.py  schema_loader.py
k8s_validator/reporters/: console.py  json.py  markdown.py
k8s_validator/utils/: binaries.py
k8s_validator/validators/: best_practices.py  schema.py  syntax.py
tests/: test_validator.py
tests/fixtures/manifests/invalid/: deployment-bad.yaml
tests/fixtures/manifests/valid/: deployment.yaml
tests/unit/: test_best_practices.py  test_cli.py  test_crd_detector.py  test_platforms.py  test_syntax_validator.py  test_validator.py
